--- a/ADSAP/templates/base/base.html
+++ b/ADSAP/templates/base/base.html
@@ -201,7 +201,12 @@
               </a>
             </li>
             <li>
-              <a href="{% url 'core:faq' %}" class="nav-link text-white Btn">
+              {% if 'Personal RH' in grupos_usuario %} 
+                  <a href="{% url 'RH:faqs' %}" class="nav-link text-white Btn">
+              {% else %}
+                  <a href="{% url 'core:faq' %}" class="nav-link text-white Btn">
+              {% endif %}
+
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-patch-question-fill" viewBox="0 0 16 16">
                   <path
@@ -211,7 +216,7 @@
               </a>
             </li>
             <li>
-              <a href="{% url 'home:cuenta' %}" class="nav-link text-white Btn">
+                <a href="{% url 'home:cuenta' %}" class="nav-link text-white Btn">
                 <svg class="bi pe-none me-2" width="16" height="16">
                   <use xlink:href="#people-circle" />
                 </svg>
