--- a/ADSAP/templates/index.html
+++ b/ADSAP/templates/index.html
@@ -113,7 +113,7 @@
   <div class="row">
     <div class="col-lg-4">
       <p>
-        <a class="btn btn-secondary btn-image" href="#">
+        <a class="btn btn-secondary btn-image" href="{% url 'core:incapacidades' %}">
           <img src="https://cdn-icons-png.flaticon.com/256/4540/4540514.png" alt="Incapacidades">
           <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">Incapacidades</span>
         </a>
