--- a/ADSAP/templates/RH/index_rh.html
+++ b/ADSAP/templates/RH/index_rh.html
@@ -116,7 +116,7 @@
     <div class="row">
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="#">
+          <a class="btn btn-secondary btn-image" href="{% url 'RH:incapacidades' %}">
             <img src="https://cdn-icons-png.flaticon.com/256/4540/4540514.png" alt="Incapacidades">
             <span style="margin-top: 5px; font-size: 1.1em; font-weight: bold;">ADMINISTRAR INCAPACIDADES</span>
           </a>
