Full reporte implementation

--- a/ADSAP/templates/base/base.html
+++ b/ADSAP/templates/base/base.html
@@ -222,6 +222,8 @@
             <button type="submit">Log out</button>
         </form>
 
+        <a class="btn btn-primary py-2 Btn1" type="" href="{% url 'core:reporte_error' %}">Reportar un error</a>
+
         </div>
       </main>
       <!-- End Sidebar -->
