--- a/ADSAP/templates/incapacidades/incapacidades.html
+++ b/ADSAP/templates/incapacidades/incapacidades.html
@@ -94,9 +94,9 @@
     <p class="Tittle">Incapacidades</p>
     <a class="btn btn-primary py-2 btn1" href="{% url 'core:incapacidades_solicitud' %}">Registrar incapacidad</a>
     <div class="Filtro">
-      <form action="permisos/filtro" method="get">
+      <form action="incapacidades/filtro" method="get">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Buscar permisos" name="busquedaPermisos">
+          <input type="text" class="form-control" placeholder="Buscar incapacidad" name="busquedaIncapacidades">
           <button type="submit" class="btn btn-primary" data-mdb-ripple-init>
             <i class="fas fa-search"></i>
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-search"
