--- a/ADSAP/templates/reporte/reporte_filter.html
+++ b/ADSAP/templates/reporte/reporte_filter.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html'%}
-{% block title %}Permisos filtro{% endblock title %}
+{% block title %}Reportes filtro{% endblock title %}
 {% block content %}
 <style>
   .background {
@@ -79,14 +79,14 @@
 
 <body>
   <div class="Contenedor">
-    <p class="Tittle">Permisos filtro</p>
+    <p class="Tittle">Reportes filtro</p>
     
 
     
     <div class="Filtro">
-      <form action="filtro" method="get">
+      <form action="" method="get">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Buscar permisos" name="busquedaPermisos">
+          <input type="text" class="form-control" placeholder="Buscar reportes" name="busquedaReportes">
           <button type="submit" class="btn btn-primary" data-mdb-ripple-init>
             <i class="fas fa-search"></i>
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-search"
@@ -99,21 +99,20 @@
       </form>
     </div>
     <div class="Respuestas">
-      {% for permiso in permisos %}
-      <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3 vacaciones" aria-current="true">
-          <img src="https://cdn-icons-png.flaticon.com/256/4343/4343430.png">
-          <div>
-            <p class="mb-0">Motivo: {{ solicitud.tipo }} </p>
-            <p class="mb-0 fecha">Periodo: {{ permiso.fecha_inicio }} al {{ permiso.fecha_fin }} </p>
-            <p class="mb-0 opacity-75 fecha"> Días solicitados: {{ permiso.dias_solicitados }} </p>
-          </div>
-        </a>
-        <a href="{% url 'core:permisos_estado' permiso.id %}" class="btn btn-primary py-2">Estado Solicitud</a>
-      </div>
-      {% endfor %}
+        {% for reporte in reportes %}
+        <div class="list-group">
+          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3 vacaciones" aria-current="true">
+            <img src="https://cdn-icons-png.flaticon.com/256/4343/4343430.png">
+            <div>
+              <p class="mb-0">Seccion: {{ reporte.seccion }} </p>
+              <p class="mb-0 fecha">Fecha envio reporte: {{ reporte.fecha_inicio }}  </p>
+            </div>
+          </a>
+          <a href="{% url 'core:reporte_detalle' pk=reporte.id %}" class="btn btn-primary py-2">Estado Reporte</a>
+        </div>
+        {% endfor %}
     </div>
     <br>
-    <a class="btn btn-primary py-2 Btn1" href="{% url 'core:permisos' %}">Volver a permisos</a>
+    <a class="btn btn-primary py-2 Btn1" href="{% url 'core:reporte_error' %}">Volver a reportes</a>
 </body>
 {% endblock content %}
