--- a/ADSAP/templates/RH/index_rh.html
+++ b/ADSAP/templates/RH/index_rh.html
@@ -132,7 +132,7 @@
       </div>
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="#">
+          <a class="btn btn-secondary btn-image" href="{% url 'RH:crea_semana' %}">
             <img src="https://cdn-icons-png.flaticon.com/256/8290/8290972.png" alt="Nomina">
             <span style="margin-top: 5px; font-size: 1.2em; font-weight: bold;">ADMINISTRAR NOMINAS</span>
           </a>
