--- a/ADSAP/templates/index.html
+++ b/ADSAP/templates/index.html
@@ -129,7 +129,7 @@
     </div>
     <div class="col-lg-4">
       <p>
-        <a class="btn btn-secondary btn-image" href="#">
+        <a class="btn btn-secondary btn-image" href="{% url 'core:nominas' %}">
           <img src="https://cdn-icons-png.flaticon.com/256/8290/8290972.png" alt="Nomina">
           <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">Nomina</span>
         </a>
