Vacation, Permission and News desing 1

--- a/ADSAP/templates/RH/Noticias/noticias_listar.html
+++ b/ADSAP/templates/RH/Noticias/noticias_listar.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html'%}
-{% block title %}Noticias{% endblock title %}
+{% block title %}Editar noticias{% endblock title %}
 {% block content %}
 <style>
   body {
@@ -83,7 +83,7 @@
   <div class="Contenedor">
     <p class="TittleADSAP">ADSAP</p>
     <img src="https://cdn-icons-png.flaticon.com/256/1074/1074106.png">
-    <p class="Sub">Noticias de la empresa</p>
+    <p class="Sub">Editar noticias de la empresa</p>
     <div class="Filtro">
       <form action="filtro" method="get">
         <div class="input-group">
