--- a/ADSAP/templates/RH/Permisos/permisos_busqueda.html
+++ b/ADSAP/templates/RH/Permisos/permisos_busqueda.html
@@ -1,116 +1,114 @@
 {% extends 'base/base.html' %}
-
+{% block title %}Administrar permisos{% endblock title %}
 {% block content %}
 <style>
-    .background {
-      background-color: #fff;
-    }
-  
-    .Contenedor {
-      background-color: #fff;
-      padding-top: 50px;
-      padding-left: 25px;
-      padding-right: 25px;
-      height: 700px;
-      width: 1000px;
-      border-radius: 20px;
-      margin-left: 300px;
-      display: block;
-    }
-  
-    img {
-      margin-top: 10px;
-      height: 50px;
-      width: 50px;
-      display: block;
-      padding-bottom: 10px;
-    }
-  
-    .Tittle {
-      font-size: 3em;
-      color: #003366;
-      font-family: 'ZCOOL QingKe HuangYou';
-      font-weight: bold;
-      text-align: center;
-      margin-bottom: 0;
-    }
-  
-    .Sub {
-      font-size: 2.5em;
-      color: #003366;
-      font-family: 'ZCOOL QingKe HuangYou';
-      text-align: left;
-      position: absolute;
-    }
-  
-    .Dia {
-      font-size: 1em;
-      color: #000000;
-      font-family: 'ZCOOL QingKe HuangYou';
-      text-align: center;
-    }
-  
-    .fecha {
-      font-size: 1.3em;
-      font-family: 'ZCOOL QingKe HuangYou';
-      text-align: justify;
-    }
-  
-    .btn {
-      background-color: #003366;
-      border-color: #003366;
-      font-size: 1.5em;
-    }
-  
-    .btn1 {
-      margin-left: 75%;
-      margin-bottom: 15px;
-    }
-  
-    .Filtro {
-      padding-bottom: 20px;
-    }
-  
-    .vacaciones {
-      height: 100px;
-      width: 100%;
-    }
-  </style>
+  .background {
+    background-color: #fff;
+  }
+
+  .Contenedor {
+    background-color: #fff;
+    padding-top: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
+    height: 700px;
+    width: 1000px;
+    border-radius: 20px;
+    margin-left: 300px;
+    display: block;
+  }
+
+  img {
+    margin-top: 10px;
+    height: 75px;
+    width: 75px;
+    display: block;
+    padding-bottom: 10px;
+  }
+
+  .Tittle {
+    font-size: 3em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 0;
+  }
+
+  .Sub {
+    font-size: 2.5em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: center;
+  }
+
+  .Dia {
+    font-size: 1em;
+    color: #000000;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: center;
+  }
+
+  .fecha {
+    font-size: 1.3em;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: justify;
+  }
+
+  .btn {
+    background-color: #003366;
+    border-color: #003366;
+    font-size: 1.5em;
+  }
+
+  .btn1 {
+    margin-left: 75%;
+    margin-bottom: 15px;
+  }
+
+  .Filtro {
+    padding-bottom: 20px;
+  }
+
+  .vacaciones {
+    height: 100px;
+    width: 100%;
+  }
+</style>
 
 <body>
-<h2>Administrar Permisos Listar</h2>
-
-<form action="filtro" method="get">
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="Buscar Permisos" name="busquedaPermiso">
-      <button type="submit" class="btn btn-primary" data-mdb-ripple-init>
-        <i class="fas fa-search"></i>
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-search"
-          viewBox="0 0 16 16">
-          <path
-            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
-        </svg>
-      </button>
+  <div class="Contenedor">
+    <p class="Tittle">ADSAP</p>
+    <p class="Sub">Administrador de permisos</p>
+    <div class="Filtro">
+      <form action="filtro" method="get">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Buscar Permisos" name="busquedaPermiso">
+          <button type="submit" class="btn btn-primary" data-mdb-ripple-init>
+            <i class="fas fa-search"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-search"
+              viewBox="0 0 16 16">
+              <path
+                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+            </svg>
+          </button>
+        </div>
+      </form>
     </div>
-</form> 
 
-{% for vacacion in resultados %}
-<div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action d-flex gap-3 vacaciones" aria-current="true">
-    <img src="https://cdn-icons-png.flaticon.com/256/4343/4343430.png">
-    <div>
-      <p class="mb-0 fecha">Periodo: {{ vacacion.id_permiso.fecha_inicio }} al {{ vacacion.id_permiso.fecha_fin }} </p>
-      <p class="mb-0 fecha"> Datos del Empleado: {{ vacacion.id_permiso.id_empleado }} </p>
-      <p class="mb-0 fecha"> Dias solicitados: {{ vacacion.id_permiso.dias_solicitados }} </p>
-      <p class="mb-0 fecha"> Tipo permiso: {{ vacacion.id_permiso.tipo }} </p>
+    {% for vacacion in resultados %}
+    <div class="list-group">
+      <a href="#" class="list-group-item list-group-item-action d-flex gap-3 vacaciones" aria-current="true">
+        <img src="https://cdn-icons-png.flaticon.com/256/7257/7257795.png">
+        <div>
+          <p class="mb-0 fecha">Periodo: {{ vacacion.id_permiso.fecha_inicio }} al {{ vacacion.id_permiso.fecha_fin }}</p>
+          <p class="mb-0 fecha"> Datos del Empleado: {{ vacacion.id_permiso.id_empleado }} </p>
+          <p class="mb-0 fecha"> Dias solicitados: {{ vacacion.id_permiso.dias_solicitados }} Tipo permiso: {{ vacacion.id_permiso.tipo }} </p>
+        </div>
+      </a>
+      <a href="{% url 'RH:permisos_estado' vacacion.id %}" class="btn btn-primary py-2 btnabrir">Abrir solicitud</a>
     </div>
-  </a>
-  <a href="{% url 'RH:permisos_estado' vacacion.id %}" class="btn btn-primary py-2">Abre Solicitud</a>
-</div>
-{% endfor %}
-</div>
-<br>
-
-<a href="{% url 'home:home' %}" class="">Volver</a>
+    {% endfor %}
+  </div>
 </body>
 {% endblock %}
