--- a/ADSAP/templates/RH/FAQ/faq_editar.html
+++ b/ADSAP/templates/RH/FAQ/faq_editar.html
@@ -1,6 +1,5 @@
 {% extends 'base/base.html'%}
-
-{% block title %}Editar faqs{% endblock title %}
+{% block title %}Menú de edicion{% endblock title %}
 {% block content %}
 <style>
   .background {
@@ -9,13 +8,11 @@
 
   .Contenedor {
     background-color: #fff;
-    padding-top: 50px;
+    padding-top: 70px;
     padding-left: 25px;
     padding-right: 25px;
-    height: 1750px;
-    width: 1000px;
-    border-radius: 20px;
-    margin-left: 300px;
+    width: 900px;
+    margin-left: 400px;
     display: block;
   }
 
@@ -28,16 +25,25 @@
     margin-bottom: 10px;
   }
 
+  .Sub {
+    font-size: 2em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  .Form{
+    font-size: 1.3em;
+    font-family: 'ZCOOL QingKe HuangYou';
+  }
+
   .BtnRealizar {
     background-color: #009c0d;
     border-color: #009c0d;
     color: #fff;
     font-family: 'ZCOOL QingKe HuangYou';
     font-weight: bold;
-  }
-
-  .btn{
-    margin-top: 35px;
   }
 
   .BtnRealizar:hover {
@@ -52,16 +58,19 @@
     font-family: 'ZCOOL QingKe HuangYou';
     font-weight: bold;
   }
+
   .BtnCancelar:hover {
     background-color: rgb(141, 0, 0);
     color: #fff;
   }
 </style>
 
-<body class="background">
+<body>
   <div class="Contenedor">
-    <p class="Tittle">Edición de FAQS</p>
-    <form method="post" enctype="multipart/form-data">
+    <p class="Tittle">ADSAP</p>
+    <p class="Sub">Editor de preguntas</p>
+    <div class="Form">
+      <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <div class="row">
@@ -73,6 +82,7 @@
             </div>
           </div>
     </form>
+    </div>
   </div>
 </body>
 {% endblock content %}
