--- a/ADSAP/templates/RH/Noticias/noticia_editar.html
+++ b/ADSAP/templates/RH/Noticias/noticia_editar.html
@@ -68,7 +68,7 @@
 <body>
   <div class="Contenedor">
     <p class="Tittle">ADSAP</p>
-    <p class="Sub">Editor noticias</p>
+    <p class="Sub">Editor de noticias</p>
     <div class="Form">
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
