--- a/ADSAP/templates/RH/FAQ/faq.html
+++ b/ADSAP/templates/RH/FAQ/faq.html
@@ -65,7 +65,7 @@
     width: 150px;
     height: 150px;
     object-fit: contain;
-    margin-top: 15px;
+    margin-top: 30px;
     margin-bottom: 0px;
   }
 
@@ -111,7 +111,7 @@
       <div class="col-lg-4">
         <p>
           <a class="btn btn-secondary btn-image btn1" href="{% url 'RH:crea_faqs' %}">
-            <img src="https://cdn-icons-png.flaticon.com/256/11911/11911011.png" alt="Dar de alta empleado">
+            <img src="https://cdn-icons-png.flaticon.com/256/6019/6019994.png">
             <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">ALTA FAQS</span>
           </a>
         </p>
@@ -119,7 +119,7 @@
       <div class="col-lg-4">
         <p>
           <a class="btn btn-secondary btn-image btn1" href="{% url 'RH:lista_faqs' %}">  
-            <img src="https://cdn-icons-png.flaticon.com/256/3934/3934107.png" alt="Modificar empleado">
+            <img src="https://cdn-icons-png.flaticon.com/256/10337/10337163.png" alt="Modificar empleado">
             <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">MODIFICAR FAQS </span>
           </a>
         </p>
