--- a/ADSAP/templates/incapacidades/incapacidades_detalles.html
+++ b/ADSAP/templates/incapacidades/incapacidades_detalles.html
@@ -107,11 +107,11 @@
       <img src="https://cdn-icons-png.flaticon.com/256/2858/2858429.png">
       <p class="Datos">Días de incapacidad: <span class="DatosUsuario">{{ solicitud.dias_solicitados }}</span></p>
       <p class="Datos">Fecha de inicio: <span class="DatosUsuario">{{ solicitud.fecha_inicio }}</span></p>
-      <p class="Datos">Fecha de regreso: <span class="DatosUsuario">{{ solicitud.fecha_fin }}</span></p>
+      <p class="Datos">Fecha de regreso: <span class="DatosUsuario">{{ solicitud.fecha_fin }}</span></p><br>
       {% if solicitud.archivo %}
-      <p>Archivo adjunto: <a href="{{ solicitud.archivo.url }} " target="_blank" >{{ solicitud.archivo.name }}</a></p>
+      <p class="Datos">Archivo adjunto: <a href="{{ solicitud.archivo.url }} " target="_blank" >{{ solicitud.archivo.name }}</a></p>
       {% else %}
-          <p class="Datos">No hay archivo adjunto. </p>
+          <p class="DatosUsuario">No hay archivo adjunto. </p>
       {% endif %}
       
     </div>
