--- a/ADSAP/templates/reporte/error_form.html
+++ b/ADSAP/templates/reporte/error_form.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html'%}
-{% block title %}Reporte de error{% endblock title %}
+{% block title %}Menú de edicion{% endblock title %}
 {% block content %}
 <style>
   .background {
@@ -8,13 +8,11 @@
 
   .Contenedor {
     background-color: #fff;
-    padding-top: 50px;
+    padding-top: 70px;
     padding-left: 25px;
     padding-right: 25px;
-    height: 700px;
-    width: 1000px;
-    border-radius: 20px;
-    margin-left: 300px;
+    width: 900px;
+    margin-left: 400px;
     display: block;
   }
 
@@ -27,77 +25,74 @@
     margin-bottom: 10px;
   }
 
-  img {
-    margin-left: auto;
-    margin-right: auto;
-    height: 200px;
-    width: 200px;
-    display: block;
-    padding-bottom: 30px;
-  }
-
-  .Texto {
-    font-size: 1.5em;
-    Font-family: 'ZCOOL QingKe HuangYou';
-    font-weight: bold;
+  .Sub {
+    font-size: 2em;
     color: #003366;
-    margin-right: 10px;
-    margin-bottom: 10px;
-  }
-
-  .Motivo {
-    font-size: 1.5em;
-    Font-family: 'ZCOOL QingKe HuangYou';
-    font-weight: bold;
-    color: #003366;
-  }
-
-  .CampoFecha {
-    font-size: 1.2em;
-    Font-family: 'ZCOOL QingKe HuangYou';
-    color: black;
-  }
-
-  .CampoMotivo {
-    width: 950px;
-    margin-bottom: 15px;
-    font-size: 1.5em;
-    Font-family: 'ZCOOL QingKe HuangYou';
-  }
-
-  .btn {
-    background-color: #003366;
-    border-color: #003366;
-    font-size: 1.5em;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: center;
     margin-bottom: 30px;
   }
 
+  .Sub1 {
+    font-size: 2em;
+    color: #003366;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+    text-align: justify;
+    margin-bottom: 30px;
+  }
+
+  .Form{
+    font-size: 1.3em;
+    font-family: 'ZCOOL QingKe HuangYou';
+  }
+
   .BtnRealizar {
-    width: 950px;
     background-color: #009c0d;
     border-color: #009c0d;
+    color: #fff;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
   }
 
   .BtnRealizar:hover {
     background-color: #006909;
+    color: #fff;
+  }
+
+  .BtnCancelar {
+    background-color: red;
+    border-color: red;
+    color: #fff;
+    font-family: 'ZCOOL QingKe HuangYou';
+    font-weight: bold;
+  }
+
+  .BtnCancelar:hover {
+    background-color: rgb(141, 0, 0);
+    color: #fff;
   }
 </style>
 
-<body class="background">
+<body>
   <div class="Contenedor">
-    <p class="Tittle">Reporte de error</p>
-    <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <div class="row">
-        <div class="col">
-          <button type="submit" class="btn btn-outline-success form-control">Enviar Reporte</button>
+    <p class="Tittle">ADSAP</p>
+    <p class="Sub">Enviar reporte de error</p>
+    <p class="Sub1">Agregar datos del problema</p>
+    <div class="Form">
+      <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <div class="row">
+          <div class="col">
+            <button type="submit" class="btn BtnRealizar form-control">Enviar Reporte</button>
+          </div>
+          <div class="col">
+            <a href="{% url 'core:reporte_error' %}" class="btn BtnCancelar form-control">Cancelar</a>
+          </div>
         </div>
-        <div class="col">
-          <a href="{% url 'home:home' %}" class="btn btn-outline-warning form-control">Cancelar</a>
-        </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 </body>
 {% endblock content %}
